@@ -1,2 +1,2 @@
-java -cp "out;lib\libjline-3.25.1.jar" Main
+java -cp "out;lib\libjline-3.25.1.jar" Main --enable-native-access=ALL-UNNAMED
 pause
